--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           brew install p7zip
           python3 -m pip install setuptools wheel
-          python3 -m pip install py7zr==0.16.1
+          python3 -m pip install py7zr
           python3 -m pip install aqtinstall==2.1.0
           python3 -m aqt install-qt  mac desktop 5.15.2 -m debug_info -O $RUNNER_WORKSPACE/Qt
       # Build and Install Potrace library
