--- a/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
+++ b/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
@@ -1,6 +1,5 @@
 name: build-win64-installer
-on:
-  push: workflow_dispatch
+on: workflow_dispatch
 jobs:
   setup-win-mingw-build-environment:
     runs-on: windows-latest
