--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,7 +1,6 @@
 name: CMake
 
-on:
-  push: workflow_dispatch
+on: workflow_dispatch
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
