--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,8 +151,7 @@ add_subdirectory(src/parser)
 add_subdirectory(src/toolpath_exporter)
 add_subdirectory(src/connection)
 add_subdirectory(src/machine)
-add_subdirectory(src/machine_job)
-add_subdirectory(src/motion_controller)
+add_subdirectory(src/periph)
 add_subdirectory(src/executor)
 add_subdirectory(src/motion_controller_job)
 
