--- a/src/executor/CMakeLists.txt
+++ b/src/executor/CMakeLists.txt
@@ -4,3 +4,6 @@ target_sources(Swiftray PRIVATE
   machine_setup_executor.cpp
   rt_status_update_executor.cpp
 )
+
+add_subdirectory(machine_job)
+add_subdirectory(operation_cmd)
