Add machine APIs for accepting operation

--- a/src/executor/CMakeLists.txt
+++ b/src/executor/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(Swiftray PRIVATE
   job_executor.cpp
   machine_setup_executor.cpp
   rt_status_update_executor.cpp
+  console_executor.cpp
 )
 
 add_subdirectory(machine_job)
