--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.15)
-project(Swiftray VERSION 1.0.1)
+project(Swiftray VERSION 1.0.2)
 message("System Name: ${CMAKE_SYSTEM_NAME}")
 
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 0)
-set(VERSION_BUILD 1)
+set(VERSION_BUILD 2)
 set(VERSION_BETA  1) #x
 set(VERSION_SUFFIX "") #-beta.x
-set(VER_PRODUCTVERSION_STR "1.0.1") #1.0.0-beta.x
+set(VER_PRODUCTVERSION_STR "1.0.2") #1.0.0-beta.x
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
@@ -143,6 +143,7 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 endif ()
 
 add_subdirectory(src/canvas)
+add_subdirectory(src/common)
 add_subdirectory(src/windows)
 add_subdirectory(src/widgets)
 add_subdirectory(src/settings)
@@ -150,7 +151,9 @@ add_subdirectory(src/shape)
 add_subdirectory(src/parser)
 add_subdirectory(src/toolpath_exporter)
 add_subdirectory(src/connection)
-add_subdirectory(src/motion_controller_job)
+add_subdirectory(src/machine)
+add_subdirectory(src/periph)
+add_subdirectory(src/executor)
 
 # ====================== Subdirectory libraries =======================
 add_subdirectory(third_party/clipper)
