--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   setup-win-mingw-build-environment:
     runs-on: windows-latest
+    env:
+      VCPKG_ROOT: '${{ github.workspace }}/vcpkg'
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -14,9 +16,6 @@ jobs:
       - name: Install Conan
         id: conan
         uses: turtlebrowser/get-conan@main
-
-      - name: Conan version
-        run: echo "${{ steps.conan.outputs.version }}"
 
       - name: Setup msys2
         uses: msys2/setup-msys2@v2
@@ -33,7 +32,7 @@ jobs:
       #  run: |
       #    bcdedit /set IncreaseUserVa 3072
 
-      - name: Build
+      - name: Build libpotrace
         shell: msys2 {0}
         run: |
           echo $PATH
@@ -44,6 +43,42 @@ jobs:
           conan install . --build=missing
           conan build .
           conan create . user/testing
+
+      - name: Try OpenCV with conan
+        run: |
+          conan install opencv/4.5.5
+
+      # vcpkg cache
+      - name: Restore vcpkg and its artifacts.
+        uses: actions/cache@v2
+        id: vcpkg-cache
+        with:
+          path: |
+            ${{ env.VCPKG_ROOT }}
+            ${{ github.workspace }}/build/vcpkg_installed
+            !${{ env.VCPKG_ROOT }}/.git
+            !${{ env.VCPKG_ROOT }}/buildtrees
+            !${{ env.VCPKG_ROOT }}/packages
+            !${{ env.VCPKG_ROOT }}/downloads
+          key: |
+            ${{ hashFiles( 'vcpkg.json' ) }}-cache-key-v1
+      # install vcpkg
+      - name: Get vcpkg(windows)
+        if: ${{ steps.vcpkg-cache.outputs.cache-hit != 'true' }}
+        run: |
+          cd ${{ github.workspace }}
+          mkdir build -force
+          git clone https://github.com/Microsoft/vcpkg.git
+          cd vcpkg
+          .\bootstrap-vcpkg.bat
+      
+      - name: install opencv (with vcpkg)
+        if: ${{ steps.vcpkg-cache.outputs.cache-hit != 'true' }}
+        run: |
+          cd ${{ github.workspace }}
+          vcpkg install opencv:x64-windows
+
+
       #- name: Deploy
       #  shell: msys2 {0}
       #  run: |
