--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,11 @@ if (DEFINED ENABLE_SENTRY)
 endif()
 
 
+message(STATUS
+  "CMAKE_TOOLCHAIN_FILE:"
+  ${CMAKE_TOOLCHAIN_FILE}
+)
+
 include_directories(
   third_party
   ${SRC_DIR}
