--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -91,6 +91,7 @@ jobs:
 
       - name: Conan install
         run: |
+          mkdir build
           cd build
           conan install .. --build=missing
             
