--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -80,14 +80,14 @@ jobs:
           vcpkg install opencv:x64-windows
 
       - name: Install Qt5
-        if: ${{ steps.vcpkg-cache.outputs.cache-hit != 'true' }}
+        #if: ${{ steps.vcpkg-cache.outputs.cache-hit != 'true' }}
         run: |
-          cd ${{ github.workspace }}
-          vcpkg install qt5:x64-windows
-          #python3 -m pip install setuptools wheel
-          #python3 -m pip install py7zr
-          #python3 -m pip install aqtinstall==2.1.0
-          #python3 -m aqt install-qt windows desktop 5.15.2 win64_msvc2019_64 -m debug_info -O ${{ github.workspace }}/Qt
+          #cd ${{ github.workspace }}
+          #vcpkg install qt5:x64-windows
+          python3 -m pip install setuptools wheel
+          python3 -m pip install py7zr
+          python3 -m pip install aqtinstall==2.1.0
+          python3 -m aqt install-qt windows desktop 5.15.2 win64_msvc2019_64 -m debug_info -O ${{ github.workspace }}/Qt
 
       - name: Conan install
         run: |
@@ -98,7 +98,7 @@ jobs:
       - name: CMake
         run: |
           #cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo
-          cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}\vcpkg\scripts\buildsystems\vcpkg.cmake" -DOpenCV_DIR="${{ github.workspace }}\vcpkg\packages\opencv_x64-windows\share\opencv"
+          cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}\vcpkg\scripts\buildsystems\vcpkg.cmake" -DOpenCV_DIR="${{ github.workspace }}\vcpkg\packages\opencv_x64-windows\share\opencv" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/clang_64/lib/cmake
       
       - name: Build
         run: |
