--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -7,8 +7,6 @@ on:
 jobs:
   setup-win-mingw-build-environment:
     runs-on: windows-latest
-    env:
-      VCPKG_ROOT: '${{ github.workspace }}/vcpkg'
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -55,25 +53,16 @@ jobs:
         id: vcpkg-cache
         with:
           path: |
-            ${{ env.VCPKG_ROOT }}
-            !${{ env.VCPKG_ROOT }}/.git
-            !${{ env.VCPKG_ROOT }}/buildtrees
-            !${{ env.VCPKG_ROOT }}/downloads
+            ${{ env.VCPKG_INSTALLATION_ROOT }}
+            !${{ env.VCPKG_INSTALLATION_ROOT }}/.git
+            !${{ env.VCPKG_INSTALLATION_ROOT }}/buildtrees
+            !${{ env.VCPKG_INSTALLATION_ROOT }}/downloads
           key: |
             ${{ hashFiles( 'vcpkg.json' ) }}-cache-key-v1
-      # install vcpkg
-      - name: Get vcpkg(windows)
-        if: ${{ steps.vcpkg-cache.outputs.cache-hit != 'true' }}
-        run: |
-          cd ${{ github.workspace }}
-          git clone https://github.com/Microsoft/vcpkg.git
-          cd vcpkg
-          .\bootstrap-vcpkg.bat
       
       - name: install opencv (with vcpkg)
-        #if: ${{ steps.vcpkg-cache.outputs.cache-hit != 'true' }}
+        if: ${{ steps.vcpkg-cache.outputs.cache-hit != 'true' }}
         run: |
-          cd ${{ github.workspace }}
           vcpkg install opencv:x64-windows
 
       - name: Install Qt5
@@ -89,7 +78,7 @@ jobs:
       - name: Create build dir
         run: |
           mkdir build
-          cd ${{ github.workspace }}/vcpkg
+          cd ${{ env.VCPKG_INSTALLATION_ROOT }}
           ls 
           cd packages
           ls
@@ -107,8 +96,8 @@ jobs:
       - name: CMake
         run: |
           #cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo
-          #cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}\vcpkg\scripts\buildsystems\vcpkg.cmake" -DOpenCV_DIR="${{ github.workspace }}\vcpkg\packages\opencv4_x64-windows\share\opencv4" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/msvc2019_64/lib/cmake
-          cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DOpenCV_DIR="${{ github.workspace }}\vcpkg\packages\opencv4_x64-windows\share\opencv4" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/msvc2019_64/lib/cmake
+          #cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_INSTALLATION_ROOT }}\scripts\buildsystems\vcpkg.cmake" -DOpenCV_DIR="${{ env.VCPKG_INSTALLATION_ROOT }}\packages\opencv4_x64-windows\share\opencv4" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/msvc2019_64/lib/cmake
+          cmake -B build -S . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DOpenCV_DIR="${{ env.VCPKG_INSTALLATION_ROOT }}\packages\opencv4_x64-windows\share\opencv4" -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt/5.15.2/msvc2019_64/lib/cmake
 
       - name: Build
         run: |
